Fix scrollbar custom width reverted by error

--- a/client/styles/_scroll.scss
+++ b/client/styles/_scroll.scss
@@ -5,6 +5,8 @@
     $foreground: map.get($theme, foreground);
     .scrollbar-control {
         --scrollbar-thumb-color: #{mat.get-color-from-palette($foreground, base, 0.3)};
+        --vertical-scrollbar-size: 9px;
+        justify-content: flex-end !important;
     }
 
     #menu .ng-scroll-content {
